# MCRT

./: -  .gitignore  .gitmodules  CMakeLists.txt  README.MD  imgui.ini
assets/: 111.mtl  IBL.md  buddha.gltf  buddha.mtl  chair.gltf  cube.glb  girl.gltf  (+16 more)
example/: App.cpp  App.hpp  CMakeLists.txt  CmakeLists.txt  main.cpp
example/Android/: readme.md  settings.gradle.kts
example/Android/app/: CMakeLists.txt  build.gradle.kts
example/Android/app/src/androidTest/java/com/example/mousechannel/: ExampleInstrumentedTest.kt
example/Android/app/src/main/: AndroidManifest.xml
example/Android/app/src/main/assets/: IBL.md  blinn_phong.mtl  girl.mtl
example/Android/app/src/main/cpp/: raster_pbr_context.cpp  raster_pbr_context.hpp  start.cpp
example/Android/app/src/main/cpp/shader/: Binding.h  Constants.h  raster.frag  raster.frag.spv  raster_old.frag  skybox.vert  skybox.vert.spv
example/Android/app/src/main/res/values/: strings.xml  themes.xml
example/Android/app/src/main/res/values-night/: themes.xml
example/Android/app/src/main/shaders/: Binding.h  Data_struct.h  common.h  cube.frag  cube.frag.spv  cube.vert  cube.vert.spv  frag.frag  frag.frag.spv  ibl_binding.h  ibl_push_constants.h  irradiance.comp  irradiance.comp.spv  lookup_table.comp  lookup_table.comp.spv  raster.frag  raster.frag.spv  raster.vert  raster.vert.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv  vert.vert  vert.vert.spv
example/Android/app/src/main/shaders/IBL/: irradiance.comp  irradiance.comp.spv  lookup_table.comp  lookup_table.comp.spv
example/Android/app/src/main/src/Helper/: Camera.cpp  CommandManager.cpp  DescriptorManager.cpp  gltf_loader.cpp
example/Android/app/src/main/src/Rendering/: Context.cpp  Model.cpp  Render_Context.cpp  Render_Frame.cpp  Texture.cpp
example/Android/app/src/main/src/Rendering/Render_Target/: Depth_RenderTarget.cpp  Final_RenderTarget.cpp  MultiSampler_RenderTarget.cpp  Render_Target.cpp
example/Android/app/src/main/src/Wrapper/: Buffer.cpp  CommandBuffer.cpp  CommandPool.cpp  DescriptorPool.cpp  DescriptorSet.cpp  Device.cpp  Fence.cpp  FrameBuffer.cpp  Image.cpp  Instance.cpp  Pipeline.cpp  RenderPass.cpp  Sampler.cpp  Semaphore.cpp  ShaderModule.cpp  SwapChain.cpp  Window_Surface.cpp
example/Android/gradle/: libs.versions.toml
example/Android/gradle/wrapper/: gradle-wrapper.properties
example/base/: raster_context.cpp  raster_context.hpp  raytracing_context.cpp  raytracing_context.hpp
example/base/shader/raster/: Data_struct.h
example/base/shader/ray_tracing/: post.frag.spv  post.vert  post.vert.spv
example/base/shaders/ray_tracing/: post.frag  post.frag.spv  post.vert.spv
example/blinn_phong/: App.cpp  blinn_phone.cpp  blinn_phone_Context.cpp
example/blinn_phong_graphic/: App.cpp  CMakeLists.txt  blinn_phone.cpp  blinn_phone_Context.cpp  blinn_phone_Context.hpp
example/cloud/: App.cpp  CMakeLists.txt  cloud.cpp  cloud_context.cpp  cloud_context.hpp  readme.md
example/cloud/shader/: Binding.h  Push_Constants.h  cloud.rahit  cloud.rgen  cloud.rgen.spv  cloud.rmiss  cloud.rmiss.spv  cloud_behind.rchit  cloud_behind.rchit.spv  cloud_front.rchit  cloud_front.rchit.spv  common.glsl  hit_payload.glsl  light_behind.rchit  ray_marching.rmiss  ray_marching.rmiss.spv  ray_marching_cloud.rmiss  ray_marching_cloud.rmiss.spv  ray_marching_light.rmiss  ray_marching_light.rmiss.spv  test.spv
example/cook_torrance/: App.cpp  CMakeLists.txt  cook_torrance.cpp  cook_torrance_Context.cpp  cook_torrance_Context.hpp  readme.md
example/cook_torrance/shader/: Binding.h  cook_torrance.rchit  cook_torrance.rgen.spv
example/offscreen/: App.cpp  CMakeLists.txt  offscreen_context.cpp  offscreen_context.hpp
example/offscreen/shader/: offscreen.frag  offscreen.frag.spv  offscreen.vert
example/path_tracing/: App.cpp  App.hpp  CMakeLists.txt  Path_tracing_Context.cpp  Path_tracing_Context.hpp  pathtracing.cpp  readme.md
example/path_tracing/shader/: Binding.h  Push_constants.h  filter.comp  filter.comp.spv  path_tracing.rchit  path_tracing.rchit.spv  path_tracing.rgen  path_tracing.rgen.spv  path_tracing.rmiss  path_tracing.rmiss.spv
example/path_tracing_light/: App.cpp  CMakeLists.txt  Path_tracing_light_Context.cpp  Path_tracing_light_Context.hpp  pathtracing_light.cpp
example/path_tracing_light/shader/: hit_payload.glsl  path_tracing_light.rchit  path_tracing_light.rmiss  path_tracing_light2.rchit  path_tracing_light2.rchit.spv  path_tracing_light2.rmiss
example/raster/: App.cpp  App.hpp  CMakeLists.txt  raster_pbr.cpp  raster_pbr_context.cpp  raster_pbr_context.hpp  readme.md
example/raster/shader/: Binding.h  Constants.h  a.spv  gbuffer.frag  gbuffer.vert  gbuffer.vert.spv  imgui.ini  pbrfs.frag  pbrfs.frag.spv  pbrfs.vert  pbrfs.vert.spv  raster.frag  raster.frag.spv  raster.vert  raster.vert.spv  raster_old.frag  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv  test.h  tonemap.frag  tonemap.frag.spv  tonemap.vert  tonemap.vert.spv
example/ray_tracing_AO/: App.cpp  CMakeLists.txt  raytracing_AO.cpp  raytracing_AO_Context.cpp  raytracing_AO_Context.hpp  readme.md
example/ray_tracing_AO/shader/: hit_payload.glsl  ray_tracing_AO.rmiss.spv  ray_tracing_AO2.rmiss
example/ray_tracing_blinn_phong/: App.cpp  App.hpp  CMakeLists.txt  blinn_phong.cpp  blinn_phong_Context.cpp  blinn_phong_Context.hpp  readme.md
example/ray_tracing_blinn_phong/shader/: blinn_phong.rmiss.spv  blinn_phong_shadow.rmiss.spv  commom.glsl
example/ray_tracing_mirror/: App.cpp  App.hpp  CMakeLists.txt  mirror.cpp  mirror_context.cpp  mirror_context.hpp
example/rt_pbr/: App.cpp  App.hpp  CMakeLists.txt  readme.md  rt_pbr.cpp  rt_pbr_context.cpp  rt_pbr_context.hpp
example/rt_pbr/shader/: Binding.h  Push_Constants.h  imgui.ini  rt_pbr.rchit  rt_pbr.rchit.spv  rt_pbr.rgen  rt_pbr.rgen.spv  rt_pbr.rmiss  rt_pbr.rmiss.spv
example/rt_skybox/: App.cpp  CMakeLists.txt  readme.md  rt_skybox.cpp  rt_skybox_context.cpp  rt_skybox_context.hpp
example/rt_skybox/shader/: Binding.h  hit_payload.glsl  skybox.rchit  skybox.rmiss.spv  test.spv
(+379 files in other folders)
